# -CodeAudit-

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.sandbox  README.md  app.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
agents/: graph.py  state.py  workers.py
database/: crud.py  models.py
debate/: __init__.py  cross_review.py
dependency_checker/: __init__.py  osv_client.py  parsers.py
docs/superpowers/specs/: 2026-05-15-phase2-enhancement-design.md  2026-05-15-phase3-feedback-deps-design.md
feedback/: __init__.py  analyzer.py  api.py  retriever.py  storage.py
rag/: __init__.py  chunker.py  indexer.py  retriever.py
sandbox/: __init__.py  executor.py  runner.py
security_fence/: __init__.py  patterns.py  reporter.py  scanner.py
static/: index.html
tools/: code_linter.py  code_metrics.py
utils/: llm_client.py
